cmake_minimum_required(VERSION 4.2)
set(CMAKE_EXPERIMENTAL_CXX_IMPORT_STD "f35a9ac6-8463-4d38-8eec-5d6008153e7d")
set(CMAKE_CXX_MODULE_STD ON)
project(bs_thread_pool VERSION 0.0.0 DESCRIPTION "placeholder" LANGUAGES C CXX)

set(_CONAN_HOST_DIR "${CMAKE_CURRENT_SOURCE_DIR}/conan/full_deploy/host")
file(GLOB _CONAN_PACKAGES LIST_DIRECTORIES true "${_CONAN_HOST_DIR}/*/*/*/*")
file(GLOB _CONAN_PACKAGES_CMAKE LIST_DIRECTORIES true "${_CONAN_HOST_DIR}/*/*/*/*/share/cmake/*")
list(APPEND CMAKE_PREFIX_PATH ${_CONAN_PACKAGES} ${_CONAN_PACKAGES_CMAKE})
file(GLOB _CONAN_PACKAGES_PKG LIST_DIRECTORIES true "${_CONAN_HOST_DIR}/*/*/*/*/lib/pkgconfig")
if(DEFINED ENV{PKG_CONFIG_LIBDIR})
  set(ENV{PKG_CONFIG_LIBDIR} "${_CONAN_PACKAGES_PKG}:$ENV{PKG_CONFIG_LIBDIR}")
else()
  set(ENV{PKG_CONFIG_LIBDIR} "${_CONAN_PACKAGES_PKG}")
endif()

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_subdirectory(src)

option(BUILD_TESTING "Build tests" ON)
if(BUILD_TESTING)
    include(CTest)
    add_subdirectory(tests)
endif()
